Calamares -- the core and nearly all of the modules in this repository --
are compatible with Qt6. That is, it compiles. Functionality has not
been tested, but early-testing distributions are encouraged to submit
pull requests to improve the code.

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Anke Boersma
 - Evan James
 - Hector Martin
 - Ivan Borzenkov

## Core ##
 - Qt6 compatibility. You can choose Qt5 (with KDE Frameworks 5) as before,
   or choose Qt6 (with KDE Frameworks 6). This means that a Qt6-based Linux
   distribution can use Calamares without needing an extra version of Qt.
   Note that some KDE Frameworks are required as well, and those need to be
   Qt6-based also (and are not released as of September 2023).
 - C++ namespaces have been shuffled around and `CalamaresUtils` has been
   retired. This has an effect on all C++ plugins, since this is neither
   a binary- nor source-compatible change.

## Modules ##
 - *keyboard* module can now be explicitly configured to use X11 keyboard
   settings or the FreeDesktop locale1 DBus service. The latter is most
   useful for Calamares as an "initial setup" system, not an installer,
   in a Wayland session. (thanks Hector)
 - *keyboard* module now writes X11 layout configuration with variants
   for all non-ASCII (e.g. us) layouts. (thanks Ivan)
 - *keyboard* module now can configure keyboard switch. (thanks Ivan)


# 3.3.0-alpha3 (2023-08-28)

This release contains contributions from (alphabetically by first name):
 - Adriaan de Groot
 - Aleksey Samoilov
 - Anke Boersma
 - Arjen Balfoort
 - Boria138
 - Brian Morison
 - Emir Sari
 - Evan Goode
 - Evan James
 - Ficelloo
 - Hector Martin
 - Jeremy Attall
 - Johannes Kamprad
 - Kasta Hashemi
 - Kevin Kofler
 - Mario Haustein
 - Masato TOYOSHIMA
 - Panda
 - Paolo Dongilli
 - Peter Jung
 - Philip Müller
 - Shivanand
 - Sławomir Lach
 - Sunderland93
 - wiz64

## Core ##