@@ -21,8 +21,8 @@
 #include "ViewManager.h"
 #include "modulesystem/Module.h"
 #include "modulesystem/ModuleManager.h"
-#include "utils/Gui.h"
 #include "utils/Dirs.h"
+#include "utils/Gui.h"
 #include "utils/Logger.h"
 #include "utils/Retranslator.h"
 #include "widgets/LogWidget.h"
