@@ -21,9 +21,7 @@ ViewStep::ViewStep( QObject* parent )
 {
 }
 
-
 ViewStep::~ViewStep() {}
-
 
 QString
 ViewStep::prettyStatus() const
@@ -42,7 +40,6 @@ ViewStep::onActivate()
 {
 }
 
-
 void
 ViewStep::onLeave()
 {
@@ -58,20 +55,17 @@ ViewStep::back()
 {
 }
 
-
 void
 ViewStep::setModuleInstanceKey( const Calamares::ModuleSystem::InstanceKey& instanceKey )
 {
     m_instanceKey = instanceKey;
 }
 
-
 void
 ViewStep::setConfigurationMap( const QVariantMap& configurationMap )
 {
     Q_UNUSED( configurationMap )
 }
-
 
 RequirementsList
 ViewStep::checkRequirements()
